--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -57,6 +57,10 @@
                 {% unless site.spotify_username ==  %}
                 <a href="http://open.spotify.com/user/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
                 {% endunless %}
+                {% unless site.zhihu_username ==  %}
+                <a href="http://zhihu.com/people/{{site.zhihu_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
+                {% endunless %}
+                
             </div>
         </div>
     </div>
