--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -58,7 +58,10 @@
                 <a href="http://open.spotify.com/user/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
                 {% endunless %}
                 {% unless site.zhihu_username ==  %}
-                <a href="http://zhihu.com/people/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-zhihu"></i></a>
+                <a href="http://zhihu.com/people/{{site.zhihu_username}}" target="_blank" class="has-text-black"><i class="fab fa-zhihu"></i></a>
+                {% endunless %}
+                {% unless site.wechat_username ==  %}
+                <img src="../assets/images/my.jpg"><i class="fab fa-weixin"></i></a>
                 {% endunless %}
             </div>
         </div>
