--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -61,7 +61,7 @@
                 <a href="http://zhihu.com/people/{{site.zhihu_username}}" target="_blank" class="has-text-black"><i class="fab fa-zhihu"></i></a>
                 {% endunless %}
             
-                <img src="../assets/images/my.jpg"><i class="fab fa-weixin"></i></a>
+                <img src="../assets/images/my.jpg" /><i class="fab fa-weixin"></i></a>
                 {% endunless %}
             </div>
         </div>
