--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -58,10 +58,10 @@
                 <a href="http://open.spotify.com/user/{{site.spotify_username}}" target="_blank" class="has-text-black"><i class="fab fa-spotify"></i></a>
                 {% endunless %}
                 {% unless site.zhihu_username ==  %}
-                <a href="http://zhihu.com/people/{{site.zhihu_username}}" target="_blank" class="has-text-black"><i class="fab fa-zhihu"></i></a>
+                <a href="http://zhihu.com/people/{{site.zhihu_username}}" target="_blank" class="has-text-blue"><i class="fab fa-zhihu"></i></a>
                 {% endunless %}
             
-                <a href="../assets/images/qrcode.jpg"  target="_blank" class="has-text-black"><i class="fab fa-weixin"></i></a>
+                <a href="../assets/images/qrcode.jpg"  target="_blank" class="has-text-green"><i class="fab fa-weixin"></i></a>
             
             </div>
         </div>
