--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
    	</script>
     <script type="text/x-mathjax-config">
     	MathJax.Hub.Config({tex2jax: {
-             inlineMath: [ ['$','$'], ["\\(","\\)"] ],displayMath: [['$$','$$']]
+             inlineMath: [ ['$','$'], ["\\(","\\)"] ],displayMath: [['$$','$$']],
              processEscapes: true
            }
          });
