--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,10 @@
                 <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
                 <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                     href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/categories">CATEGORIES</a>
+                <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/tags">TAGS</a>
                 {% include dropdown.html %}
+                
             </div>
 
         </div>
